# majsoul-rpa

./: .gitignore  README.md  setup.cfg  setup.py
headless_browser/: Dockerfile  headless_browser.py
majsoul_rpa/: __init__.py  config.py  yostar_login.py
majsoul_rpa/_impl/: __init__.py  browser.py  mahjongsoul.proto  redis.py  template.py
majsoul_rpa/common/: __init__.py
majsoul_rpa/presentation/: __init__.py  auth.py  home.py  login.py  match.py  presentation_base.py
majsoul_rpa/presentation/match/: __init__.py  _common.py  match.py  operation.py  state.py
majsoul_rpa/presentation/match/event/: __init__.py  _base.py  angangjiagang.py  chipenggang.py  dapai.py  hule.py  liuju.py  new_round.py  no_tile.py  zimo.py
majsoul_rpa/presentation/room/: __init__.py  base.py  host.py
mitmproxy/: Dockerfile  sniffer.py
samples/: main.py  moqie.py
template/: reboot.yaml
template/auth/: confirm.yaml  login.yaml  marker.yaml
template/home/: marker0.yaml  marker1.yaml  marker2.yaml  marker3.yaml  room_creation.yaml  visit_to_shrine.yaml
template/home/room_creation/: confirm.yaml
template/login/: marker.yaml
template/match/: chi.yaml  chi0.yaml  chi1.yaml  gang0.yaml  gang1.yaml  liqi.yaml  liuju.yaml  marker2.yaml  marker3.yaml  match_result_confirm.yaml  peng0.yaml  peng1.yaml  rong.yaml  round_result_confirm.yaml  skip.yaml  zimohu.yaml
template/room/: add_cpu.yaml  leave.yaml  marker.yaml  start.yaml
