[metadata]
name = majsoul-rpa
version = 0.0.1
description = A Robotic Process Automation (RPA) framework for Mahjong Soul (雀魂)
author = Cryolite
author_email = cryolite.indigo@gmail.com
url = https://github.com/Cryolite/majsoul-rpa

[options]
packages = find:
install_requires =
    boto3
    docker
    ewmh
    jsonschema
    numpy
    opencv-python
    Pillow
    protobuf
    pyautogui
    pygetwindow
    pyyaml
    redis
    selenium
